[gd_scene load_steps=9 format=3 uid="uid://c8qid57voptni"]

[ext_resource type="Texture2D" uid="uid://cujq2ir1ycdq5" path="res://Assets/Images/UI/button_disabled.png" id="1_nqble"]
[ext_resource type="Script" path="res://Scripts/UI-Components/achievement_panel.gd" id="2_gtq1h"]
[ext_resource type="Texture2D" uid="uid://dne5vt1ni2ox0" path="res://Assets/Images/UI/Achievements/MR1.png" id="3_irtkm"]
[ext_resource type="FontFile" uid="uid://dsfgk2j8mabcb" path="res://Assets/Fonts/simsun.ttc" id="4_tvtgk"]
[ext_resource type="FontFile" uid="uid://b0ev28ueo51cu" path="res://Assets/Fonts/5_Minecraft AE(支持中文).ttf" id="5_5j1yv"]
[ext_resource type="AudioStream" uid="uid://8c0qs3sgbrud" path="res://Assets/Sounds/FXs/UIs/Sound_AchievementWin.ogg" id="6_ojf0t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1fpja"]
atlas = ExtResource("1_nqble")
region = Rect2(98, 192, 331, 143)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4s0qw"]
texture = SubResource("AtlasTexture_1fpja")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="AchievementPanel" type="Panel"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -370.0
offset_right = 370.0
offset_bottom = 149.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4s0qw")
script = ExtResource("2_gtq1h")
achievement_keywords = "MR1"

[node name="AchievementIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 17.0
offset_right = 145.0
offset_bottom = 134.0
texture = ExtResource("3_irtkm")

[node name="AchievementNameLabel" type="Label" parent="."]
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 153.0
offset_top = 30.0
offset_right = 1284.0
offset_bottom = 118.0
scale = Vector2(0.318954, 0.318954)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_tvtgk")
theme_override_font_sizes/font_size = 72
text = "欢迎来到MinecraftRush"

[node name="AchievementIntroLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 79.0
offset_right = 1284.0
offset_bottom = 167.0
scale = Vector2(0.318954, 0.318954)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_5j1yv")
theme_override_font_sizes/font_size = 72
text = "进入任意一关进行游玩。"

[node name="AchievementWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ojf0t")
autoplay = true
bus = &"Sound"
